[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/interactable/interactable.gd" type="Script" id=1]

[node name="Interactable" type="Area2D"]
script = ExtResource( 1 )

[node name="Texture" type="Sprite" parent="."]

[node name="Collision" type="CollisionShape2D" parent="."]

[node name="PhysicCollision" type="StaticBody2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="PhysicCollision"]

[node name="Timer" type="Timer" parent="."]

[node name="Animation" type="AnimationPlayer" parent="."]

[connection signal="body_entered" from="." to="." method="on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="on_timer_timeout"]
[connection signal="animation_finished" from="Animation" to="." method="on_animation_finished"]
